test/unit/cxtm/jtm/invalid/association-detached-noroles2.jtm
{"version": "1.0",
 "item_type": "association",
 "type": "ii:#assoctype"}
 